# PythonTemplate

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  tox.ini
.github/workflows/: ci.yml
hooks/: post_gen_project.py
pythondemo/: __init__.py
pythondemo/ui/: __init__.py  hello_world.py
tests/: test_hello_world.py  test_template.py
{{cookiecutter.project_folder}}/: .gitlab-ci.yml  CONTRIBUTING.md  LICENSE
{{cookiecutter.project_folder}}/docs/: conf.py  index.rst
{{cookiecutter.project_folder}}/tests/: test_hello_world.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  hello_world.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  {{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/doc/: .gitignore  conf.py  index.rst  pycharm.rst  requirements.rst
{{cookiecutter.project_slug}}/doc/notebooks/: first_notebook.ipynb
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst  make.bat  requirements.rst
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: pylintrc  test_hello_world.py  test_requirements.py  test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  __main__.py  _version.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/ui/: hello_world.py  {{cookiecutter.pkg_name}}.py  {{cookiecutter.pkg_name}}_command_line.py  {{cookiecutter.pkg_name}}_demo.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/utils/: versioning.py
{{cookiecutter.repo_slug}}/docs/: conf.py
{{cookiecutter.repo_slug}}/{{cookiecutter.project_slug}}/ui/: __init__.py
